@@ -28,7 +28,9 @@
 #include <stdio.h>
 #include <stdlib.h>
 #include <unistd.h>
+#ifdef HAVE_WAIT_H
 #include <wait.h>
+#endif /* HAVE_WAIT_H */
 #ifdef HAVE_SIGINFO_H
 #include <siginfo.h>
 #endif /* HAVE_SIGINFO_H */
@@ -62,7 +64,7 @@ signal_handler(int signal)
 		pthread_exit(NULL);
 	} else if (signal == SIGINT) {
 		psignal(signal, "\nAborting ...");
-#if !defined(UPERF_LINUX)
+#if defined(UPERF_SOLARIS)
 		sigsend(P_PGID, getpgid(getpid()), SIGKILL);
 #endif
 		exit(2);
